4446 ftp - use virtual thread here